# LARC

./: .gitignore  CMakeLists.txt  LARCcontributors  Makefile  README.md  TRANS.TBL  changeSince2.0
CPPWrapper/: CMakeLists.txt  TRANS.TBL  indexable.cpp  indexable.hh  larc.cpp  larc.hh
doc/: LARCimprovements.Updated20171006  LARCimprovements.Updated20190806  LARCimprovements.Updated20200316  LARCimprovements.Updated20210611  LARCimprovements.Updated20220830  TRANS.TBL  build-notes.tex
doc/DeveloperNotes/: avoid_pointers.txt  full_documentation.txt
lib/: README
local/: Makefile.apple  Makefile.conf  Makefile.conf.cygwin  Makefile.conf.ubuntu1804  Makefile.mac
src/: .typeCOMPLEX.h  .typeINTEGER.h  .typeREAL.h  CMakeLists.txt  Doxyfile.in  TRANS.TBL  clifford.c  clifford.h  doc.h  exampleLARC.c  exampleLARC.h  exampleLARC.py  experimental.c  experimental.h  fft.c  fft.h  global.c  global.h  gv.py  hash.c  hash.h  high-level-doc.d  info_store.c  info_store.h  io.c  io.h  json.c  json.h  larc.h  larcSWIG.i  larc_py.i  logging.c  mar.c  mar.h  matmath.c  matmath.h  matrix_accessor.c  matrix_store.c  matrix_store.h  op_store.c  (+22 more)
src/TypeFiles/: typeBOOLEAN.h  typeCLIFFORD.h  typeCOMPLEX.h  typeINTEGER.h  typeLOWER.h  typeMPCOMPLEX.h  typeMPINTEGER.h  typeMPRATCOMPLEX.h  typeMPRATIONAL.h  typeMPREAL.h  typeREAL.h  typeUPPER.h
src/oldCode/: experimental.c  experimental.h
src/python/: build_random_01matrix.py  build_random_matrix.py  canonical_format_json.py  json_file_count_specified_scalar.py  json_file_locate_specified_scalar.py  json_files_matrix_equal.py  json_scalars_to_strings.pl  larcMatrix_file_count_specified_scalar.py  larcMatrix_file_locate_specified_scalar.py  larcMatrix_files_matrix_equal.py  larcMatrix_scalars_to_strings.pl  larc_utilities.py  print_json_matrix_naive.py  print_larcMatrix_file_naive.py  python_utilities.py
tests/: CMakeLists.txt  TRANS.TBL
tests/C/: CMakeLists.txt  Makefile  TRANS.TBL  test1.c  test2.c
tests/CPP/: CMakeLists.txt  TRANS.TBL  support.hh  test1.cpp  test2.cpp  test3.cpp  test4.cpp  test5.cpp  test6.cpp  test7.cpp  test8.cpp
tests/dat/: TRANS.TBL
tests/dat/in/: README  TRANS.TBL  nand.Complex.json  nand.Integer.json  nand.Real.json  sample.1.2.Complex.json  sample.1.2.Integer.json  sample.1.2.Real.json  toffoli.Complex.json  toffoli.Integer.json
tests/jupyter/: TRANS.TBL  cleaning-hashstats.ipynb  cleaning.ipynb  empty_bins.ipynb  hashstats.ipynb  hashstats2.ipynb  marktest1.ipynb
tests/python/: CMakeLists.txt  README  TRANS.TBL  boundtest.py  circulant.py  clifftest.py  example_unittest.py  matrix_quick_build.py  notworking_test_GMP.py  run_unittests.py  script  symHerm.py  test_SPR_params.py  test_blocks.py  test_cleaning.py  test_fft.py  test_hashstats.py  test_ij_access.py  test_infoStore1.py  test_infoStore2.py  test_kronecker.py  test_localHash.py  test_math.py  test_matrixBuild.py  test_newMAR.py  test_precision.py  test_reporting.py  test_roots_unity.py  test_unittest_example.py  test_unittest_matmath.py  test_unittest_matrix_store.py  test_unittest_op_store.py  test_unittest_scalars.py  toeplitz.py  tridiag.py
